# dendrondal.github.io

./: .gitmodules  .travis.yml  CNAME  Makefile  a-wild-itertools-appeared.html  application.py  data-science-for-social-good.html  generative-models.html  index.html  lessons-learned-from-writing-a-phd-dissertation-in-markdown.html  making-this-website.html  migrating-from-keras-to-pytorch-in-2020.html  pelicanconf.py  pyproject.toml  requirements.txt  settings.cfg  thoughts-on-reproducibility-in-data-science.html
author/: jon-steven-dal-williams.html
category/: blog.html  projects.html  talks.html  tutorials.html
content/: dssg.rst  generative_models.rst  itertools.rst  making_this_website.rst  making_this_website.txt  markdown_thesis.rst  pytorch_migration.rst  reproducibility.rst
docs/: index.html
feeds/: blog.atom.xml  talks.atom.xml  tutorials.atom.xml
itertools/: index.html
making_this_website/: index.html
markdown_thesis/: index.html
pages/: about-me.html  dssg.md  generative_models.md  itertools.md  making_this_website.md  markdown_thesis.md  reproducibility.md
reproducibility/: index.html
static/: m-dark.compiled.css  m-theme-dark.css  pygments-dark.css
tag/: airflow.html  altair.html  aws.html  bash.html  bayesian-stats.html  chatbots.html  chemistry.html  cnns.html  computer-vision.html  flask.html  functional-programming.html  gans.html  jupyter.html  keras.html  latex.html  luigi.html  make.html  markdown.html  microsoft.html  mission-driven-data-science.html  mongodb.html  pandas.html  papermill.html  pytorch.html  reproducibility.html  (+11 more)
(+11 files in other folders)
